<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<parent>
		<groupId>py.com.sodep.captura</groupId>
		<artifactId>formserver</artifactId>
		<version>1.4.4-SNAPSHOT</version>
	</parent>

	<modelVersion>4.0.0</modelVersion>
	<artifactId>fs-business-api</artifactId>
	<name>fs_business_api</name>
	<description>Captura's Form Server Business API</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<spring.version>4.3.16.RELEASE</spring.version>
		<org.slf4j.version>1.6.1</org.slf4j.version>
		<!-- our libraries -->
		<captura-exchange.version>0.0.12</captura-exchange.version>
		<form-definition.version>0.0.6</form-definition.version>
		<license-api.version>0.0.1</license-api.version>
	</properties>

	<dependencies>
		<!-- logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${org.slf4j.version}</version>
			<scope>compile</scope>
		</dependency>

		<!-- JPA API (it's not implementation, it's the JPA 2.0 API) -->
		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.0-api</artifactId>
			<version>1.0.0.Final</version>
		</dependency>

		<!-- Mongo DB -->
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>3.12.14</version>
		</dependency>

		<!-- Captura Exchange -->
		<dependency>
			<groupId>py.com.sodep.captura</groupId>
			<artifactId>captura-exchange</artifactId>
			<version>${captura-exchange.version}</version>
		</dependency>

		<!-- Form Definition -->
		<dependency>
			<groupId>py.com.sodep.captura</groupId>
			<artifactId>form-definition</artifactId>
			<version>${form-definition.version}</version>
		</dependency>

		<!-- License API -->
		<dependency>
			<groupId>py.com.sodep.captura</groupId>
			<artifactId>license-api</artifactId>
			<version>${license-api.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.0.0.GA</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>6.0.19.Final</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
		</dependency>

		<!-- Apache commons Lang -->
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-install-plugin</artifactId>
			<version>2.4</version>
			<type>maven-plugin</type>
		</dependency>

		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-deploy-plugin</artifactId>
			<version>2.7</version>
			<type>maven-plugin</type>
		</dependency>

	</dependencies>

	<profiles>
		<profile>
			<id>java8-doclint-disabled</id>
			<activation>
			<jdk>[1.8,)</jdk>
			</activation>
			<properties>
			<javadoc.opts>-Xdoclint:none</javadoc.opts>
			</properties>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
                    		<additionalparam>${javadoc.opts}</additionalparam>
                		</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
